msg/async: fix mark_down vs accept race

If we mark_down a connection while it is accepting and reading the
connect message, we fail to see the CLOSED state before setting the
next state (ACCEPTING_WAIT_CONNECT_MSG_AUTH), and as a result we later
crash because the can_write bool isn't in the right state.

Fixes: http://tracker.ceph.com/issues/36497
Signed-off-by: Sage Weil <sage@redhat.com>